--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
+# User and group
 GID=1000
 GROUPNAME=zwahlen
 UID=1000
 USERNAME=zwahlen
 WORKDIR=app
+
+# Container and image name
+CONTAINERNAME=dev-flashcards
